--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,10 +34,11 @@ jobs:
       shell: bash
       run: |
         ./clean.sh "./out/install/windows-release"
+        mv out/install/windows-release out/install/xdispatch_ddb
 
     - name: Upload artifact windows-libdispatch.zip
       if: ${{ !env.ACT }}
       uses: actions/upload-artifact@v1
       with:
         name: windows-libdispatch
-        path: ./out/install/windows-release/
+        path: ./out/install/
